src/le_parser.output
Grammaire

    0 $accept: Prog $end

    1 Prog: Blockdecl DeclFoncts

    2 Blockdecl: ε
    3          | Blockdecl DeclVar
    4          | Blockdecl DeclStruct

    5 DeclStruct: STRUCT IDENT '{' Champs '}' ';'

    6 Champs: Champs Champ
    7       | Champ

    8 Champ: TypeUse Declarateurs ';'

    9 TypeUse: TYPE
   10        | STRUCT IDENT

   11 DeclVar: TypeUse Declarateurs ';'

   12 Declarateurs: Declarateurs ',' IDENT
   13             | IDENT

   14 DeclFoncts: DeclFoncts DeclFonct
   15           | DeclFonct

   16 DeclFonct: EnTeteFonct Corps

   17 EnTeteFonct: TypeUse IDENT '(' Parametres ')'
   18            | VOID IDENT '(' Parametres ')'

   19 Parametres: VOID
   20           | ListTypVar

   21 ListTypVar: ListTypVar ',' TypeUse IDENT
   22           | TypeUse IDENT

   23 Corps: '{' DeclVarLocal SuiteInstr '}'

   24 DeclVarLocal: ε
   25             | DeclVarLocal DeclVar
   26             | DeclVarLocal DeclStruct

   27 SuiteInstr: SuiteInstr Instr
   28           | ε

   29 Instr: Variable '=' Exp ';'
   30      | IF '(' Exp ')' Instr
   31      | IF '(' Exp ')' Instr ELSE Instr
   32      | WHILE '(' Exp ')' Instr
   33      | IDENT '(' Arguments ')' ';'
   34      | RETURN Exp ';'
   35      | RETURN ';'
   36      | '{' SuiteInstr '}'
   37      | ';'

   38 Variable: Variable '.' IDENT
   39         | IDENT

   40 Exp: Exp OR TB
   41    | TB

   42 TB: TB AND FB
   43   | FB

   44 FB: FB EQ M
   45   | M

   46 M: M ORDER E
   47  | E

   48 E: E ADDSUB T
   49  | T

   50 T: T DIVSTAR F
   51  | F

   52 F: ADDSUB F
   53  | '!' F
   54  | '(' Exp ')'
   55  | NUM
   56  | CHARACTER
   57  | IDENT '(' Arguments ')'
   58  | Variable

   59 Arguments: ListExp
   60          | ε

   61 ListExp: ListExp ',' Exp
   62        | Exp


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' (33) 53
    '(' (40) 17 18 30 31 32 33 54 57
    ')' (41) 17 18 30 31 32 33 54 57
    ',' (44) 12 21 61
    '.' (46) 38
    ';' (59) 5 8 11 29 33 34 35 37
    '=' (61) 29
    '{' (123) 5 23 36
    '}' (125) 5 23 36
    error (256)
    TYPE <type> (258) 9
    VOID (259) 18 19
    IF (260) 30 31
    ELSE (261) 31
    WHILE (262) 32
    RETURN (263) 34 35
    OR (264) 40
    AND (265) 42
    STRUCT (266) 5 10
    EQ <comp> (267) 44
    ORDER <comp> (268) 46
    IDENT <ident> (269) 5 10 12 13 17 18 21 22 33 38 39 57
    NUM <num> (270) 55
    ADDSUB <byte> (271) 48 52
    DIVSTAR <byte> (272) 50
    CHARACTER <byte> (273) 56
    THEN (274)


Non-terminaux, suivis des règles où ils apparaissent

    $accept (29)
        à gauche: 0
    Prog <node> (30)
        à gauche: 1
        à droite: 0
    Blockdecl <node> (31)
        à gauche: 2 3 4
        à droite: 1 3 4
    DeclStruct <node> (32)
        à gauche: 5
        à droite: 4 26
    Champs <node> (33)
        à gauche: 6 7
        à droite: 5 6
    Champ <node> (34)
        à gauche: 8
        à droite: 6 7
    TypeUse <node> (35)
        à gauche: 9 10
        à droite: 8 11 17 21 22
    DeclVar <node> (36)
        à gauche: 11
        à droite: 3 25
    Declarateurs <node> (37)
        à gauche: 12 13
        à droite: 8 11 12
    DeclFoncts <node> (38)
        à gauche: 14 15
        à droite: 1 14
    DeclFonct <node> (39)
        à gauche: 16
        à droite: 14 15
    EnTeteFonct <node> (40)
        à gauche: 17 18
        à droite: 16
    Parametres <node> (41)
        à gauche: 19 20
        à droite: 17 18
    ListTypVar <node> (42)
        à gauche: 21 22
        à droite: 20 21
    Corps <node> (43)
        à gauche: 23
        à droite: 16
    DeclVarLocal <node> (44)
        à gauche: 24 25 26
        à droite: 23 25 26
    SuiteInstr <node> (45)
        à gauche: 27 28
        à droite: 23 27 36
    Instr <node> (46)
        à gauche: 29 30 31 32 33 34 35 36 37
        à droite: 27 30 31 32
    Variable <node> (47)
        à gauche: 38 39
        à droite: 29 38 58
    Exp <node> (48)
        à gauche: 40 41
        à droite: 29 30 31 32 34 40 54 61 62
    TB <node> (49)
        à gauche: 42 43
        à droite: 40 41 42
    FB <node> (50)
        à gauche: 44 45
        à droite: 42 43 44
    M <node> (51)
        à gauche: 46 47
        à droite: 44 45 46
    E <node> (52)
        à gauche: 48 49
        à droite: 46 47 48
    T <node> (53)
        à gauche: 50 51
        à droite: 48 49 50
    F <node> (54)
        à gauche: 52 53 54 55 56 57 58
        à droite: 50 51 52 53
    Arguments <node> (55)
        à gauche: 59 60
        à droite: 33 57
    ListExp <node> (56)
        à gauche: 61 62
        à droite: 59 61


État 0

    0 $accept: • Prog $end

    $défaut  réduction par utilisation de la règle 2 (Blockdecl)

    Prog       aller à l'état 1
    Blockdecl  aller à l'état 2


État 1

    0 $accept: Prog • $end

    $end  décalage et aller à l'état 3


État 2

    1 Prog: Blockdecl • DeclFoncts
    3 Blockdecl: Blockdecl • DeclVar
    4          | Blockdecl • DeclStruct

    TYPE    décalage et aller à l'état 4
    VOID    décalage et aller à l'état 5
    STRUCT  décalage et aller à l'état 6

    DeclStruct   aller à l'état 7
    TypeUse      aller à l'état 8
    DeclVar      aller à l'état 9
    DeclFoncts   aller à l'état 10
    DeclFonct    aller à l'état 11
    EnTeteFonct  aller à l'état 12


État 3

    0 $accept: Prog $end •

    $défaut  accepter


État 4

    9 TypeUse: TYPE •

    $défaut  réduction par utilisation de la règle 9 (TypeUse)


État 5

   18 EnTeteFonct: VOID • IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 13


État 6

    5 DeclStruct: STRUCT • IDENT '{' Champs '}' ';'
   10 TypeUse: STRUCT • IDENT

    IDENT  décalage et aller à l'état 14


État 7

    4 Blockdecl: Blockdecl DeclStruct •

    $défaut  réduction par utilisation de la règle 4 (Blockdecl)


État 8

   11 DeclVar: TypeUse • Declarateurs ';'
   17 EnTeteFonct: TypeUse • IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 15

    Declarateurs  aller à l'état 16


État 9

    3 Blockdecl: Blockdecl DeclVar •

    $défaut  réduction par utilisation de la règle 3 (Blockdecl)


État 10

    1 Prog: Blockdecl DeclFoncts •
   14 DeclFoncts: DeclFoncts • DeclFonct

    TYPE    décalage et aller à l'état 4
    VOID    décalage et aller à l'état 5
    STRUCT  décalage et aller à l'état 17

    $défaut  réduction par utilisation de la règle 1 (Prog)

    TypeUse      aller à l'état 18
    DeclFonct    aller à l'état 19
    EnTeteFonct  aller à l'état 12


État 11

   15 DeclFoncts: DeclFonct •

    $défaut  réduction par utilisation de la règle 15 (DeclFoncts)


État 12

   16 DeclFonct: EnTeteFonct • Corps

    '{'  décalage et aller à l'état 20

    Corps  aller à l'état 21


État 13

   18 EnTeteFonct: VOID IDENT • '(' Parametres ')'

    '('  décalage et aller à l'état 22


État 14

    5 DeclStruct: STRUCT IDENT • '{' Champs '}' ';'
   10 TypeUse: STRUCT IDENT •

    '{'  décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 10 (TypeUse)


État 15

   13 Declarateurs: IDENT •
   17 EnTeteFonct: TypeUse IDENT • '(' Parametres ')'

    '('  décalage et aller à l'état 24

    $défaut  réduction par utilisation de la règle 13 (Declarateurs)


État 16

   11 DeclVar: TypeUse Declarateurs • ';'
   12 Declarateurs: Declarateurs • ',' IDENT

    ';'  décalage et aller à l'état 25
    ','  décalage et aller à l'état 26


État 17

   10 TypeUse: STRUCT • IDENT

    IDENT  décalage et aller à l'état 27


État 18

   17 EnTeteFonct: TypeUse • IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 28


État 19

   14 DeclFoncts: DeclFoncts DeclFonct •

    $défaut  réduction par utilisation de la règle 14 (DeclFoncts)


État 20

   23 Corps: '{' • DeclVarLocal SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 24 (DeclVarLocal)

    DeclVarLocal  aller à l'état 29


État 21

   16 DeclFonct: EnTeteFonct Corps •

    $défaut  réduction par utilisation de la règle 16 (DeclFonct)


État 22

   18 EnTeteFonct: VOID IDENT '(' • Parametres ')'

    TYPE    décalage et aller à l'état 4
    VOID    décalage et aller à l'état 30
    STRUCT  décalage et aller à l'état 17

    TypeUse     aller à l'état 31
    Parametres  aller à l'état 32
    ListTypVar  aller à l'état 33


État 23

    5 DeclStruct: STRUCT IDENT '{' • Champs '}' ';'

    TYPE    décalage et aller à l'état 4
    STRUCT  décalage et aller à l'état 17

    Champs   aller à l'état 34
    Champ    aller à l'état 35
    TypeUse  aller à l'état 36


État 24

   17 EnTeteFonct: TypeUse IDENT '(' • Parametres ')'

    TYPE    décalage et aller à l'état 4
    VOID    décalage et aller à l'état 30
    STRUCT  décalage et aller à l'état 17

    TypeUse     aller à l'état 31
    Parametres  aller à l'état 37
    ListTypVar  aller à l'état 33


État 25

   11 DeclVar: TypeUse Declarateurs ';' •

    $défaut  réduction par utilisation de la règle 11 (DeclVar)


État 26

   12 Declarateurs: Declarateurs ',' • IDENT

    IDENT  décalage et aller à l'état 38


État 27

   10 TypeUse: STRUCT IDENT •

    $défaut  réduction par utilisation de la règle 10 (TypeUse)


État 28

   17 EnTeteFonct: TypeUse IDENT • '(' Parametres ')'

    '('  décalage et aller à l'état 24


État 29

   23 Corps: '{' DeclVarLocal • SuiteInstr '}'
   25 DeclVarLocal: DeclVarLocal • DeclVar
   26             | DeclVarLocal • DeclStruct

    TYPE    décalage et aller à l'état 4
    STRUCT  décalage et aller à l'état 6

    $défaut  réduction par utilisation de la règle 28 (SuiteInstr)

    DeclStruct  aller à l'état 39
    TypeUse     aller à l'état 40
    DeclVar     aller à l'état 41
    SuiteInstr  aller à l'état 42


État 30

   19 Parametres: VOID •

    $défaut  réduction par utilisation de la règle 19 (Parametres)


État 31

   22 ListTypVar: TypeUse • IDENT

    IDENT  décalage et aller à l'état 43


État 32

   18 EnTeteFonct: VOID IDENT '(' Parametres • ')'

    ')'  décalage et aller à l'état 44


État 33

   20 Parametres: ListTypVar •
   21 ListTypVar: ListTypVar • ',' TypeUse IDENT

    ','  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 20 (Parametres)


État 34

    5 DeclStruct: STRUCT IDENT '{' Champs • '}' ';'
    6 Champs: Champs • Champ

    TYPE    décalage et aller à l'état 4
    STRUCT  décalage et aller à l'état 17
    '}'     décalage et aller à l'état 46

    Champ    aller à l'état 47
    TypeUse  aller à l'état 36


État 35

    7 Champs: Champ •

    $défaut  réduction par utilisation de la règle 7 (Champs)


État 36

    8 Champ: TypeUse • Declarateurs ';'

    IDENT  décalage et aller à l'état 48

    Declarateurs  aller à l'état 49


État 37

   17 EnTeteFonct: TypeUse IDENT '(' Parametres • ')'

    ')'  décalage et aller à l'état 50


État 38

   12 Declarateurs: Declarateurs ',' IDENT •

    $défaut  réduction par utilisation de la règle 12 (Declarateurs)


État 39

   26 DeclVarLocal: DeclVarLocal DeclStruct •

    $défaut  réduction par utilisation de la règle 26 (DeclVarLocal)


État 40

   11 DeclVar: TypeUse • Declarateurs ';'

    IDENT  décalage et aller à l'état 48

    Declarateurs  aller à l'état 16


État 41

   25 DeclVarLocal: DeclVarLocal DeclVar •

    $défaut  réduction par utilisation de la règle 25 (DeclVarLocal)


État 42

   23 Corps: '{' DeclVarLocal SuiteInstr • '}'
   27 SuiteInstr: SuiteInstr • Instr

    IF      décalage et aller à l'état 51
    WHILE   décalage et aller à l'état 52
    RETURN  décalage et aller à l'état 53
    IDENT   décalage et aller à l'état 54
    '{'     décalage et aller à l'état 55
    '}'     décalage et aller à l'état 56
    ';'     décalage et aller à l'état 57

    Instr     aller à l'état 58
    Variable  aller à l'état 59


État 43

   22 ListTypVar: TypeUse IDENT •

    $défaut  réduction par utilisation de la règle 22 (ListTypVar)


État 44

   18 EnTeteFonct: VOID IDENT '(' Parametres ')' •

    $défaut  réduction par utilisation de la règle 18 (EnTeteFonct)


État 45

   21 ListTypVar: ListTypVar ',' • TypeUse IDENT

    TYPE    décalage et aller à l'état 4
    STRUCT  décalage et aller à l'état 17

    TypeUse  aller à l'état 60


État 46

    5 DeclStruct: STRUCT IDENT '{' Champs '}' • ';'

    ';'  décalage et aller à l'état 61


État 47

    6 Champs: Champs Champ •

    $défaut  réduction par utilisation de la règle 6 (Champs)


État 48

   13 Declarateurs: IDENT •

    $défaut  réduction par utilisation de la règle 13 (Declarateurs)


État 49

    8 Champ: TypeUse Declarateurs • ';'
   12 Declarateurs: Declarateurs • ',' IDENT

    ';'  décalage et aller à l'état 62
    ','  décalage et aller à l'état 26


État 50

   17 EnTeteFonct: TypeUse IDENT '(' Parametres ')' •

    $défaut  réduction par utilisation de la règle 17 (EnTeteFonct)


État 51

   30 Instr: IF • '(' Exp ')' Instr
   31      | IF • '(' Exp ')' Instr ELSE Instr

    '('  décalage et aller à l'état 63


État 52

   32 Instr: WHILE • '(' Exp ')' Instr

    '('  décalage et aller à l'état 64


État 53

   34 Instr: RETURN • Exp ';'
   35      | RETURN • ';'

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    ';'        décalage et aller à l'état 69
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    Exp       aller à l'état 73
    TB        aller à l'état 74
    FB        aller à l'état 75
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 54

   33 Instr: IDENT • '(' Arguments ')' ';'
   39 Variable: IDENT •

    '('  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 39 (Variable)


État 55

   36 Instr: '{' • SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 28 (SuiteInstr)

    SuiteInstr  aller à l'état 81


État 56

   23 Corps: '{' DeclVarLocal SuiteInstr '}' •

    $défaut  réduction par utilisation de la règle 23 (Corps)


État 57

   37 Instr: ';' •

    $défaut  réduction par utilisation de la règle 37 (Instr)


État 58

   27 SuiteInstr: SuiteInstr Instr •

    $défaut  réduction par utilisation de la règle 27 (SuiteInstr)


État 59

   29 Instr: Variable • '=' Exp ';'
   38 Variable: Variable • '.' IDENT

    '='  décalage et aller à l'état 82
    '.'  décalage et aller à l'état 83


État 60

   21 ListTypVar: ListTypVar ',' TypeUse • IDENT

    IDENT  décalage et aller à l'état 84


État 61

    5 DeclStruct: STRUCT IDENT '{' Champs '}' ';' •

    $défaut  réduction par utilisation de la règle 5 (DeclStruct)


État 62

    8 Champ: TypeUse Declarateurs ';' •

    $défaut  réduction par utilisation de la règle 8 (Champ)


État 63

   30 Instr: IF '(' • Exp ')' Instr
   31      | IF '(' • Exp ')' Instr ELSE Instr

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    Exp       aller à l'état 85
    TB        aller à l'état 74
    FB        aller à l'état 75
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 64

   32 Instr: WHILE '(' • Exp ')' Instr

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    Exp       aller à l'état 86
    TB        aller à l'état 74
    FB        aller à l'état 75
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 65

   39 Variable: IDENT •
   57 F: IDENT • '(' Arguments ')'

    '('  décalage et aller à l'état 87

    $défaut  réduction par utilisation de la règle 39 (Variable)


État 66

   55 F: NUM •

    $défaut  réduction par utilisation de la règle 55 (F)


État 67

   52 F: ADDSUB • F

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    F         aller à l'état 88


État 68

   56 F: CHARACTER •

    $défaut  réduction par utilisation de la règle 56 (F)


État 69

   35 Instr: RETURN ';' •

    $défaut  réduction par utilisation de la règle 35 (Instr)


État 70

   54 F: '(' • Exp ')'

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    Exp       aller à l'état 89
    TB        aller à l'état 74
    FB        aller à l'état 75
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 71

   53 F: '!' • F

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    F         aller à l'état 90


État 72

   38 Variable: Variable • '.' IDENT
   58 F: Variable •

    '.'  décalage et aller à l'état 83

    $défaut  réduction par utilisation de la règle 58 (F)


État 73

   34 Instr: RETURN Exp • ';'
   40 Exp: Exp • OR TB

    OR   décalage et aller à l'état 91
    ';'  décalage et aller à l'état 92


État 74

   41 Exp: TB •
   42 TB: TB • AND FB

    AND  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 41 (Exp)


État 75

   43 TB: FB •
   44 FB: FB • EQ M

    EQ  décalage et aller à l'état 94

    $défaut  réduction par utilisation de la règle 43 (TB)


État 76

   45 FB: M •
   46 M: M • ORDER E

    ORDER  décalage et aller à l'état 95

    $défaut  réduction par utilisation de la règle 45 (FB)


État 77

   47 M: E •
   48 E: E • ADDSUB T

    ADDSUB  décalage et aller à l'état 96

    $défaut  réduction par utilisation de la règle 47 (M)


État 78

   49 E: T •
   50 T: T • DIVSTAR F

    DIVSTAR  décalage et aller à l'état 97

    $défaut  réduction par utilisation de la règle 49 (E)


État 79

   51 T: F •

    $défaut  réduction par utilisation de la règle 51 (T)


État 80

   33 Instr: IDENT '(' • Arguments ')' ';'

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 60 (Arguments)

    Variable   aller à l'état 72
    Exp        aller à l'état 98
    TB         aller à l'état 74
    FB         aller à l'état 75
    M          aller à l'état 76
    E          aller à l'état 77
    T          aller à l'état 78
    F          aller à l'état 79
    Arguments  aller à l'état 99
    ListExp    aller à l'état 100


État 81

   27 SuiteInstr: SuiteInstr • Instr
   36 Instr: '{' SuiteInstr • '}'

    IF      décalage et aller à l'état 51
    WHILE   décalage et aller à l'état 52
    RETURN  décalage et aller à l'état 53
    IDENT   décalage et aller à l'état 54
    '{'     décalage et aller à l'état 55
    '}'     décalage et aller à l'état 101
    ';'     décalage et aller à l'état 57

    Instr     aller à l'état 58
    Variable  aller à l'état 59


État 82

   29 Instr: Variable '=' • Exp ';'

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    Exp       aller à l'état 102
    TB        aller à l'état 74
    FB        aller à l'état 75
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 83

   38 Variable: Variable '.' • IDENT

    IDENT  décalage et aller à l'état 103


État 84

   21 ListTypVar: ListTypVar ',' TypeUse IDENT •

    $défaut  réduction par utilisation de la règle 21 (ListTypVar)


État 85

   30 Instr: IF '(' Exp • ')' Instr
   31      | IF '(' Exp • ')' Instr ELSE Instr
   40 Exp: Exp • OR TB

    OR   décalage et aller à l'état 91
    ')'  décalage et aller à l'état 104


État 86

   32 Instr: WHILE '(' Exp • ')' Instr
   40 Exp: Exp • OR TB

    OR   décalage et aller à l'état 91
    ')'  décalage et aller à l'état 105


État 87

   57 F: IDENT '(' • Arguments ')'

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 60 (Arguments)

    Variable   aller à l'état 72
    Exp        aller à l'état 98
    TB         aller à l'état 74
    FB         aller à l'état 75
    M          aller à l'état 76
    E          aller à l'état 77
    T          aller à l'état 78
    F          aller à l'état 79
    Arguments  aller à l'état 106
    ListExp    aller à l'état 100


État 88

   52 F: ADDSUB F •

    $défaut  réduction par utilisation de la règle 52 (F)


État 89

   40 Exp: Exp • OR TB
   54 F: '(' Exp • ')'

    OR   décalage et aller à l'état 91
    ')'  décalage et aller à l'état 107


État 90

   53 F: '!' F •

    $défaut  réduction par utilisation de la règle 53 (F)


État 91

   40 Exp: Exp OR • TB

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    TB        aller à l'état 108
    FB        aller à l'état 75
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 92

   34 Instr: RETURN Exp ';' •

    $défaut  réduction par utilisation de la règle 34 (Instr)


État 93

   42 TB: TB AND • FB

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    FB        aller à l'état 109
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 94

   44 FB: FB EQ • M

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    M         aller à l'état 110
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 95

   46 M: M ORDER • E

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    E         aller à l'état 111
    T         aller à l'état 78
    F         aller à l'état 79


État 96

   48 E: E ADDSUB • T

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    T         aller à l'état 112
    F         aller à l'état 79


État 97

   50 T: T DIVSTAR • F

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    F         aller à l'état 113


État 98

   40 Exp: Exp • OR TB
   62 ListExp: Exp •

    OR  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 62 (ListExp)


État 99

   33 Instr: IDENT '(' Arguments • ')' ';'

    ')'  décalage et aller à l'état 114


État 100

   59 Arguments: ListExp •
   61 ListExp: ListExp • ',' Exp

    ','  décalage et aller à l'état 115

    $défaut  réduction par utilisation de la règle 59 (Arguments)


État 101

   36 Instr: '{' SuiteInstr '}' •

    $défaut  réduction par utilisation de la règle 36 (Instr)


État 102

   29 Instr: Variable '=' Exp • ';'
   40 Exp: Exp • OR TB

    OR   décalage et aller à l'état 91
    ';'  décalage et aller à l'état 116


État 103

   38 Variable: Variable '.' IDENT •

    $défaut  réduction par utilisation de la règle 38 (Variable)


État 104

   30 Instr: IF '(' Exp ')' • Instr
   31      | IF '(' Exp ')' • Instr ELSE Instr

    IF      décalage et aller à l'état 51
    WHILE   décalage et aller à l'état 52
    RETURN  décalage et aller à l'état 53
    IDENT   décalage et aller à l'état 54
    '{'     décalage et aller à l'état 55
    ';'     décalage et aller à l'état 57

    Instr     aller à l'état 117
    Variable  aller à l'état 59


État 105

   32 Instr: WHILE '(' Exp ')' • Instr

    IF      décalage et aller à l'état 51
    WHILE   décalage et aller à l'état 52
    RETURN  décalage et aller à l'état 53
    IDENT   décalage et aller à l'état 54
    '{'     décalage et aller à l'état 55
    ';'     décalage et aller à l'état 57

    Instr     aller à l'état 118
    Variable  aller à l'état 59


État 106

   57 F: IDENT '(' Arguments • ')'

    ')'  décalage et aller à l'état 119


État 107

   54 F: '(' Exp ')' •

    $défaut  réduction par utilisation de la règle 54 (F)


État 108

   40 Exp: Exp OR TB •
   42 TB: TB • AND FB

    AND  décalage et aller à l'état 93

    $défaut  réduction par utilisation de la règle 40 (Exp)


État 109

   42 TB: TB AND FB •
   44 FB: FB • EQ M

    EQ  décalage et aller à l'état 94

    $défaut  réduction par utilisation de la règle 42 (TB)


État 110

   44 FB: FB EQ M •
   46 M: M • ORDER E

    ORDER  décalage et aller à l'état 95

    $défaut  réduction par utilisation de la règle 44 (FB)


État 111

   46 M: M ORDER E •
   48 E: E • ADDSUB T

    ADDSUB  décalage et aller à l'état 96

    $défaut  réduction par utilisation de la règle 46 (M)


État 112

   48 E: E ADDSUB T •
   50 T: T • DIVSTAR F

    DIVSTAR  décalage et aller à l'état 97

    $défaut  réduction par utilisation de la règle 48 (E)


État 113

   50 T: T DIVSTAR F •

    $défaut  réduction par utilisation de la règle 50 (T)


État 114

   33 Instr: IDENT '(' Arguments ')' • ';'

    ';'  décalage et aller à l'état 120


État 115

   61 ListExp: ListExp ',' • Exp

    IDENT      décalage et aller à l'état 65
    NUM        décalage et aller à l'état 66
    ADDSUB     décalage et aller à l'état 67
    CHARACTER  décalage et aller à l'état 68
    '('        décalage et aller à l'état 70
    '!'        décalage et aller à l'état 71

    Variable  aller à l'état 72
    Exp       aller à l'état 121
    TB        aller à l'état 74
    FB        aller à l'état 75
    M         aller à l'état 76
    E         aller à l'état 77
    T         aller à l'état 78
    F         aller à l'état 79


État 116

   29 Instr: Variable '=' Exp ';' •

    $défaut  réduction par utilisation de la règle 29 (Instr)


État 117

   30 Instr: IF '(' Exp ')' Instr •
   31      | IF '(' Exp ')' Instr • ELSE Instr

    ELSE  décalage et aller à l'état 122

    $défaut  réduction par utilisation de la règle 30 (Instr)


État 118

   32 Instr: WHILE '(' Exp ')' Instr •

    $défaut  réduction par utilisation de la règle 32 (Instr)


État 119

   57 F: IDENT '(' Arguments ')' •

    $défaut  réduction par utilisation de la règle 57 (F)


État 120

   33 Instr: IDENT '(' Arguments ')' ';' •

    $défaut  réduction par utilisation de la règle 33 (Instr)


État 121

   40 Exp: Exp • OR TB
   61 ListExp: ListExp ',' Exp •

    OR  décalage et aller à l'état 91

    $défaut  réduction par utilisation de la règle 61 (ListExp)


État 122

   31 Instr: IF '(' Exp ')' Instr ELSE • Instr

    IF      décalage et aller à l'état 51
    WHILE   décalage et aller à l'état 52
    RETURN  décalage et aller à l'état 53
    IDENT   décalage et aller à l'état 54
    '{'     décalage et aller à l'état 55
    ';'     décalage et aller à l'état 57

    Instr     aller à l'état 123
    Variable  aller à l'état 59


État 123

   31 Instr: IF '(' Exp ')' Instr ELSE Instr •

    $défaut  réduction par utilisation de la règle 31 (Instr)
